# re4life-ROS2

./: CMakeLists.txt  package.xml
config/: amcl_config.yaml  controller_server.yaml  diff_drive_controller.yaml  global_costmap.yaml  local_costmap.yaml  re4life_controllers.yaml
launch/: custom_bringup.launch.py  display.launch.py  gazebo.launch.py  nav2_launch.py  slam_toolbox.launch.py
maps/: map_server.yaml  my_gazebo_map.yaml  my_map.yaml  my_map2.yaml
meshes/: Cube.004.dae
rviz/: display.rviz
scripts/: create_map.py  keyboard_control.py  simple_map.yaml
urdf/: relife-model-gazebo.xacro  relife-model2.xacro  relife.urdf  relife_model.urdf.xacro  relife_ros2_control.xacro  robot-check.urdf
worlds/: arena.world  basic_world.sdf
